@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-07-30 Kimmo
+ PATCH: [ 1530352 ] Start flashing WinMerge window when folder compare is ready
+  Src: DirView.cpp MainFrm.cpp MainFrm.h
+
 2006-07-29 Takashi
  PATCH: [ 1529915 ] Refresh menu on DirView does not work correctly
   Src: DirActions.cpp DirScan.cpp
